--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment-timezone": "^0.5.45",
     "mongoose": "^8.5.1",
     "morgan": "^1.10.0",
+    "node-response-handler": "^1.0.7",
     "shortid": "^2.2.16"
   },
   "devDependencies": {
